# bert

./: .dockerignore  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  lab.py  package-lock.json  package.json  pyproject.toml  run.sh
.github/workflows/: ci.yml
api/: main.py
benchmarks/: B7_INFRA_VALUE_METHODOLOGY.md  B8_EFFICIENCY_AND_RAG_PLAN.md  BENCHMARK_SYNTHESIS.md  M1_REPORT.md  RETRIEVAL_BENCHMARK.md  V2_REPORT.md  V3_REPORT.md  b10_niah.py  b1_latency_throughput.py  b2_beir_multi.py  b2_beir_scifact.py  b2_retrieval_quality.py  b3_memory_longmemeval.py  b5_adversarial_eval.py  b6_compile_report.py  b7_ab_infra.py  b7_runner_loop.py  b7_stats.py  b9_agentic_grep.py  b9_aider_retrieve.py  b9_graph_retrieve.py  b9_rag.py  b9_rag_runner.py  b9_rag_stats.py  m1_arms.py  m1_corpus.py  m1_report.py  m1_run.sh  run_b10_niah.py  run_b7_harness_lift.py  run_b9_aider_recall.py  run_b9_graph_recall.py  run_b9_grep_pilot.py  run_b9_pilot.py  run_b9_wall.py  v2_arms.py  v2_bert_tool_arm.py  v2_big_corpus.py  v2_claude_track.py  v2_clean_rows.py  (+21 more)
benchmarks/b7_workloads/: t0_i1.md  t0_i2.md  t0_i3.md  t1_i1.md  t1_i2.md  t1_i3.md  t2_i1.md  t2_i2.md  t2_i3.md  t3_i1.md  t3_i2.md  t3_i3.md
benchmarks/b9_gold/: gold_qa.json
benchmarks/results/: B10_NIAH_RESULT.md  B2_BEIR_MULTI_RESULT.md  B2_BEIR_RESULT.md  B9_RAG_RESULT.md  REPORT.md  REPORT_CPRIME.md  b10_niah_20260603T064535.json  b10_niah_heatmap_20260603T071702.json  b7_harness_lift_20260602T190226.json  b7_harness_lift_20260603T004921.json  b9_rag_final_20260602T170111.json  b9_rag_pilot_20260602T060959.json  b9_wall_20260602T173506.json  diverse_after_bm25_gen.md  diverse_final_2026-05-26.md  mission_organicity_test_2026-05-26.md  observability_analysis_2026-05-26.md  observability_analysis_v2_2026-05-26.md  observability_analysis_v3_2026-05-26.md  real_cycle_findings_2026-05-26.md  tier1_cache_decision_2026-05-30.md  v2_corpora_manifest.json
bot/: alerts.py  approval.py  emitter.py  telegram_listener.py
channels/: engineering.md  general.md  qa-findings.md  research.md  strategy.md
core/: __init__.py  adversarial_eval.py  agent.py  agntcy.py  artifact_acceptance.py  bm25.py  brief_assembler.py  canvas_emit.py  canvas_watcher.py  capability_matrix.py  compact.py  concern_flow.py  config.py  consolidator.py  contradiction.py  cost_estimator.py  cost_ledger.py  creator.py  cycle_budget.py  decode.py  delegation.py  director.py  effort_triage.py  enrichment.py  evaluator.py  feature_dsl.py  feature_mcp_tools.py  feature_promoter.py  feature_registry.py  finalize_tools.py  grader.py  grading_calibration.py  graph_extract.py  graph_store.py  hooks.py  host_detector.py  idle_compute.py  indexer.py  kv_sharing.py  lab_aggregator.py  (+62 more)
core/memory_adapters/: __init__.py  code_repo.py  document_corpus.py
core/migrations/: __init__.py  __main__.py
docs/design/: 2026-06-05-ingest-mcp-tool.md
evals/: cache_token_reduction.py  p_vs_06_threshing.py  p_vs_07_clearness_phase1.py
evals/inspect/: __init__.py  falsifiers.py  memoryagentbench.py  owasp_top10.py
evals/role_capability/: __init__.py  _common.py  clearness_phase1.py  clearness_phase2.py  evaluator.py  implementer.py  researcher.py  strategist.py  threshing.py
missions/: analysis.md  build.md  research.md
prompts/: charter_template.md  clearness_phase1.md  clearness_phase2.md  director.md  director_decision.md  evaluator.md  implementer.md  researcher.md  strategist.md  threshing.md
schemas/: clearness_query.json  concern_entry.json  dispatch_spec.json  result_packet.json  seasoning_entry.json
schemas/migrations/: __init__.py  v1_to_v2.py
tests/: _LIVE_TESTS.md  _acceptance_demo_flight.py  _e2e_mcp_full_lifecycle.py  _install_verify.sh  _live_recheck_onboard.py  _live_walkthrough.py  _real_implementer_canvasagent_1_0.py  _real_implementer_canvasagent_1_1a.py  _real_implementer_canvasagent_1_1b2_rewire.py  _real_implementer_canvasagent_1_1b_backend.py  _real_implementer_canvasagent_1_2a_history.py  _real_implementer_canvasagent_1_3_electron.py  _real_implementer_canvasagent_analytics.py  _real_remaining_lenses_dispatch.py  _real_researcher_canvas_patterns_R1.py  _real_researcher_dispatch.py  _real_researcher_dispatch_c2_trend.py  _real_strategist_dispatch.py  _real_strategist_phase0_exit.py  _real_strategist_phase0_exit_v2.py  _security_boundaries.py  _smoke_a2a_endpoints.py  _smoke_aa_mission.py  _smoke_agntcy.py  _smoke_alerts.py  _smoke_api_full.py  _smoke_architecture_brief.py  _smoke_bb_phase.py  _smoke_bridge_grading.py  _smoke_brief_assembler.py  _smoke_cache_hit_benchmark.py  _smoke_canvas_watcher.py  _smoke_capability_matrix.py  _smoke_cc_director.py  _smoke_cerebras_qwen3_32b.py  _smoke_clearness_failure_modes.py  _smoke_collate_events.py  _smoke_compact_shapers.py  _smoke_concern_flow.py  _smoke_concern_lifecycle.py  (+236 more)
tools/: analyze_cycle_retrieval.py  analyze_observability.py  analyze_per_alpha.py  backfill_cycle_outcomes.py  batch_progress.sh  bert_cli.py  bert_demo_cycle.py  bert_doctor.py  bert_init.py  bert_nightly.sh  bert_run.py  bert_verify.py  cache_hit_benchmark.py  check_otel_setup.py  collate_events_jsonl.py  compare_mission_outcomes.py  daily_history_compile.py  daily_quality_report.py  director_letter.py  enrich_events_jsonl.py  event.py  export_for_web.py  falsifier_baseline.py  generate_bm25_traffic.py  generate_diverse_traffic.py  generate_now_page.py  generate_observability_traffic.py  grading_calibration_check.py  install_hooks.sh  install_nightly.py  live_finalize_check.py  measure_ollama_prefix_cache.py  measure_token_redundancy.py  memory.py  migrate_resultpackets_to_events.py  migrate_to_pace_layers.py  nightly_backup.sh  periodic_analyze.sh  project_cli.py  prune_zero_invocation_skills.py  (+17 more)
(+57 files in other folders)
